# api/routes/routes.go
@@ -21,12 +21,12 @@ func RegisterRoutes(server *gin.Engine) {
 	server.POST("/login", h.Login)
 	server.POST("/signup", h.Signup)
 	server.POST("/user/validate", h.ValidateToken)
-	server.GET("/email/confirmation/:uuid", h.ConfirmationEmail)
 	server.GET("/info", h.Info)
 
 	authenticated := server.Group("/")
 	authenticated.Use(middleware.Authenticate)
 	authenticated.POST("/exercise/add", h.AddExercise)
+	authenticated.GET("/workout/user", h.GetWorkoutsByUserId)
 
 	// Initialize swagger
 	if os.Getenv("GIN_MODE") == "debug" {
@@ -40,10 +40,10 @@ func RegisterRoutes(server *gin.Engine) {
 			swag.POST("/login", h.Login)
 			swag.POST("/signup", h.Signup)
 			swag.POST("/user/validate", h.ValidateToken)
-			swag.GET("/email/confirmation", h.ConfirmationEmail)
 			swag.GET("/info", h.Info)
 
 			authenticatedSwag.POST("/exercise/add", h.AddExercise)
+			authenticatedSwag.GET("/workout/user", h.GetWorkoutsByUserId)
 		}
 		server.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 	}
